# wagtail-easyAI

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: linter.yml
docs/: conf.py  index.rst
docs/intro/: deployment.rst  install.rst  overview.rst
docs/misc/: news.rst  versioning.rst
wagtail_automl/: admin.py  apps.py  wagtail_hooks.py
wagtail_automl/blocks/: graph_blocks.py  ml_blocks.py
wagtail_automl/migrations/: 0001_initial.py
wagtail_automl/models/: pipeline.py  project.py
wagtail_automl/templates/wagtailautoml/: train.html
wagtail_automl/views/: pipeline.py
wagtail_automl/widgets/: pipeline.py  project.py
wagtail_easyai/: __init__.py  admin.py  apps.py  wagtail_hooks.py
wagtail_easyai/blocks/: graph.py  ml.py
wagtail_easyai/migrations/: 0001_initial.py  0002_auto_20210417_0513.py  0003_csvdata.py  0004_abstractdata.py  0005_auto_20210613_0518.py
wagtail_easyai/models/: project.py
wagtail_easyai/models/data/: csv.py  data.py
wagtail_easyai/templates/wagtail_easyai/: inspect.html  predict.html
wagtail_easyai/widgets/: pipeline.py  project.py
